--- a/src/style.css
+++ b/src/style.css
@@ -1,50 +1,94 @@
 * {
     all: unset;
     font-family: "azukifontB";
-    font-size: 22px;
     font-weight: bold;
 }
 
-#v_box {
-    min-width: 52px;
-    
+/* Bar configuration */
+#bar_main_box { 
     background-color: #ffffff;
+    border-right: 1px solid #ccbbee;
 }
 
-#bt_1,
-#bt_2,
-#bt_3,
-#bt_4 {
-    min-width: 34px;
-    min-height: 34px;
-
-    background-image: url('/home/tailr/Pictures/cake.png');
-    background-repeat: no-repeat;
-    background-size: cover;
-
-    margin: 8px 4px 8px 4px;
+#bar_buttons {
 }
 
-#buttons {
-    padding: 8px 4px 0px 4px;
+#bar_btn1 {
+    min-width: 50px;
+    min-height: 50px;
+
+    color: #665588;
+    font-size: 22px;
+
+    margin: 0px;
 }
 
-#bat {
-    color: #ee8888;
+#bar_btn1:hover {
+    opacity: 0.5;
+}
+
+#bar_bat {
+    color: #665588;
+    font-size: 22px;
     
     padding: 8px 0px 8px 0px;
 }
 
-#sep {
+#bar_sep {
     min-height: 4px;
     
-    background-color: #ffcccc;
+    background-color: #ccbbee;
     border-radius: 2px;
     margin: 0px 16px 0px 16px;
 }
 
-#date {
-    color: #ee8888;
+#bar_date {
+    color: #665588;
+    font-size: 22px;
     
     padding: 8px 0px 12px 0px;
+}
+
+/* Card configuration */
+#card_main_box {
+    background-color: #ffffff;
+    border: 1px solid #ccbbee;
+}
+
+#card_title {
+    min-height: 40px;
+
+    border-bottom: 1px solid #ccbbee;
+}
+
+#card_body {
+}
+
+#card_b_start {
+    min-width: 200px;
+}
+
+#card_b_center {
+    border-left: 1px solid #ccbbee;
+    border-right: 1px solid #ccbbee;
+}
+
+#user_name {
+    color: #665588;
+    font-size: 22px;
+}
+
+#host_name {
+    color: #ccbbee;
+    font-size: 18px;
+}
+
+#card_b_end {
+    min-width: 200px;
+}
+
+#card_bottom {
+    min-height: 40px;
+    
+    border-top: 1px solid #ccbbee;
 }
