--- a/src/scss/colors/lavender.scss
+++ b/src/scss/colors/lavender.scss
@@ -1,11 +1,11 @@
-$fg: #776699;
+$fg: #886677;
 $bg: #ffffff;
 
-$black:     #776699;
+$black:     #886677;
 $red:       #aa77aa;
 $green:     #bb99cc;
 $yellow:    #eeddee;
 $blue:      #aa99cc;
 $magenta:   #ddbbdd;
-$cyan:      #ddccee;
+$cyan:      #ccbbdd;
 $white:     #faf2fa;
