--- a/src/scss/card.scss
+++ b/src/scss/card.scss
@@ -1,6 +1,15 @@
 #card_main {
     background-color: $bg;
     border: 1px solid $cyan;
+}
+
+#card_title {
+    min-height: 0px;
+
+    background: linear-gradient(180deg, $bg, $cyan);
+}
+
+#card_body {
     padding: 16px;
 }
 
@@ -9,7 +18,7 @@
         font-family: "Comic Shanns";
         font-size: 24px;
         font-weight: bold;
-        color: $blue;
+        color: $fg;
         margin-bottom: 4px;
     }
 
@@ -42,6 +51,11 @@
         border-radius: 4px;
         padding: 8px 16px 8px 16px;
     }
+
+    border-right: 1px solid $cyan;
+    border-left: 1px solid $cyan;
+    padding: 16px;
+    margin: 0px 16px 0px 16px;
 }
 
 #card_sys_info {
@@ -49,14 +63,22 @@
     #volume,
     #network {
         min-width: 160px;
-        min-height: 40px;
+        min-height: 24px;
 
         font-size: 18px;
         font-weight: bold;
         color: $fg;
 
         border: 1px solid $cyan;
-        padding: 4px 8px 4px 8px;
+        padding: 8px;
+    }
+
+    #brightness,
+    #volume {
+        #value,
+        #icon {
+            color: $green;
+        }
     }
 
     #network {
@@ -83,5 +105,6 @@
     }
     
     background-color: $white;
-    padding: 
+    padding: 8px 16px 8px 16px;
+    margin: 0px 8px 8px 8px;
 }
