--- a/src/scss/card.scss
+++ b/src/scss/card.scss
@@ -4,113 +4,86 @@
 }
 
 #card_title {
-    #date {
+    background: linear-gradient(180deg, $bg, $cyan);
+    padding: 16px;
+
+    #clock {
         font-size: 20px;
+        font-weight: bold;
         color: $fg;
     }
-
-    padding: 8px;
-}
-
-#card_header {
-    min-height: 0px;
-
-    border-top: 1px solid $fg;
-    border-bottom: 1px solid $fg;
 }
 
 #card_body {
-    #pfp_box {
-    }
+    padding: 16px;
 
     #user_info {
-        #subtitle {
-            font-size: 22px;
-            color: $green;
-        }
-
         #user_name {
-            font-size: 20px;
+            font-size: 18px;
             color: $fg;
-            border-bottom: 1px solid $fg;
+            margin: 4px;
         }
+    }
 
-        #host_name {
-            font-size: 20px;
-            color: $fg;
-            border-bottom: 1px solid $fg;
-        }
+    #system_info {
+        font-size: 16px;
+        color: $fg;
+        padding: 8px;
 
-        #term_cols {
-            #c1 { color: $black; }
-            #c2 { color: $red; }
-            #c3 { color: $green; }
-            #c4 { color: $yellow; }
-            #c5 { color: $blue; }
-            #c6 { color: $magenta; }
-            #c7 { color: $cyan; }
-            #c8 { color: $white; }
-
-            font-size: 14px;
-        }
-
-        #uptime {
-            font-size: 20px;
+        #subtitle {
+            font-size: 18px;
             color: $fg;
 
             background-color: $yellow;
+            margin-bottom: 4px;
+            padding: 4px;
         }
-
-        border-right: 1px solid $fg;
-        padding: 0px 16px 0px 16px;
     }
 
-    #sys_info {
-        #subtitle {
-            font-size: 22px;
-            color: $green;
-        }
-
-        #brightness,
-        #volume {
-            font-size: 20px;
-            color: $fg;
-            border-bottom: 1px solid $fg;
-        }
-
-        #network {
-            font-size: 20px;
-            color: $fg;
-        }
-
-        padding: 0px 16px 0px 16px;
-    }
-
-    padding: 16px;
-}
-
-#card_bottom {
     #web_bookmarks {
+        padding: 8px;
+
+        #subtitle {
+            font-size: 18px;
+            color: $fg;
+
+            background-color: $yellow;
+            margin-bottom: 4px;
+            padding: 4px;
+        }
+
+        #l1,
+        #l2,
+        #l3,
+        #l4 {
+            font-size: 16px;
+            color: $fg;
+        }
+        
         #bm1,
         #bm2,
         #bm3,
         #bm4 {
-            font-size: 20px;
+            font-size: 16px;
             color: $green;
             border-bottom: 1px solid $green;
         }
-
+        
         #bm1:hover,
         #bm2:hover,
         #bm3:hover,
         #bm4:hover {
-            color: $magenta;
-            border-bottom: 1px solid $magenta;
+            color: $cyan;
         }
-
-        background-color: $white;
-        padding: 16px;
     }
+}
 
-    border-top: 1px solid $fg;
+#card_bottom {
+    #mpris_box {
+        font-size: 16px;
+        color: $fg;
+
+        border-top: 1px solid $cyan;
+        padding: 8px; 
+    }
 }
