--- a/src/scss/bar.scss
+++ b/src/scss/bar.scss
@@ -10,8 +10,8 @@
     font-size: 22px;
     color: $fg;
 
-    background: linear-gradient(180deg, $bg, $cyan);
-    // background-color: $white;
+    // background: linear-gradient(180deg, $bg, $cyan);
+    background-color: $white;
     border-bottom: 1px solid $cyan;
 }
 
