--- a/src/style.scss
+++ b/src/style.scss
@@ -3,6 +3,6 @@
     font-family: "azukifontB";
 }
 
-@import 'scss/colors/lavender.scss'
+@import 'scss/colors/shortcake.scss'
 @import 'scss/bar.scss'
 @import 'scss/card.scss'
