--- a/src/scss/bar.scss
+++ b/src/scss/bar.scss
@@ -13,6 +13,8 @@
     // background: linear-gradient(180deg, $bg, $cyan);
     background-color: $white;
     border-bottom: 1px solid $cyan;
+
+    box-shadow: 1px 1px 2px grey;
 }
 
 #draw_card:hover {
