--- a/src/scss/colors/shortcake.scss
+++ b/src/scss/colors/shortcake.scss
@@ -2,10 +2,20 @@ $fg: #aa0000;
 $bg: #ffffee;
 
 $black:     #aa0000;
-$red:       #aa0000;
+$red:       #cc4444;
 $green:     #ee8888;
 $yellow:    #ffdddd;
 $blue:      #ffbbbb;
 $magenta:   #ffaaaa;
 $cyan:      #ffcccc;
 $white:     #ffffff;
+
+$ft1: #88ddee;
+$ft2: #88bbff;
+$ft3: #cc88ff;
+$ft4: #ff88cc;
+$ft5: #ffbb88;
+$ft6: #ffdd88;
+$ft7: #bbee88;
+$ft8: #88ddee;
+
