--- a/src/style/scss/colors/shortcake.scss
+++ b/src/style/scss/colors/shortcake.scss
@@ -10,12 +10,14 @@ $magenta:   #ffaaaa;
 $cyan:      #ffcccc;
 $white:     #ffffff;
 
-$ft1: #88ddee;
-$ft2: #88bbff;
-$ft3: #cc88ff;
-$ft4: #ff88cc;
-$ft5: #ffbb88;
-$ft6: #ffdd88;
-$ft7: #bbee88;
-$ft8: #88ddee;
+$gem1: #88ddee;
+$gem2: #88bbff;
+$gem3: #cc88ff;
+$gem4: #ff88cc;
+$gem5: #ffbb88;
+$gem6: #ffdd88;
+$gem7: #bbee88;
+$gem8: #88ddee;
 
+$x11grey: #bebebe;
+$snow: #fffafa;
